--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -1,4 +1,25 @@
 body
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-  color: white
-  background: black
+  text-align: center
+  font-size: 30px
+  #root
+    display: flex
+    justify-content: center
+    width: 100% 
+  .container
+    border: 2px solid silver
+    background: black
+    color: white
+    display: flex
+    flex-direction: column
+    margin: 0px 15%
+  .buttons
+     display: flex
+  button
+      width: 100%
+  .btn1
+    background-color: green
+  .btn2
+    background-color: red
+  .btn3
+    background-color: yellow
