--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -23,3 +23,8 @@ body
     background-color: red
   .btn3
     background-color: yellow
+  .calc
+    background: black
+    color: white
+  .result
+    background: yellow
