--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -12,7 +12,7 @@ body
     color: white
     display: flex
     flex-direction: column
-    margin: 0px 15%
+    margin: 15px 15%
   .buttons
      display: flex
   button
@@ -25,6 +25,9 @@ body
     background-color: yellow
   .calc
     background: black
+    margin: 15px 15%
     color: white
   .result
     background: yellow
+  .change
+    display: flex
