--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -1,7 +1,9 @@
 body
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
   text-align: center
-  font-size: 30px
+  font-size: 28px
+  .app
+    width: 100%
   #root
     display: flex
     justify-content: center
@@ -12,7 +14,7 @@ body
     color: white
     display: flex
     flex-direction: column
-    margin: 15px 15%
+    margin: 15px 30%
   .buttons
      display: flex
   button
@@ -25,7 +27,7 @@ body
     background-color: yellow
   .calc
     background: black
-    margin: 15px 15%
+    margin: 15px 30%
     color: white
   .result
     background: yellow
