--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -1,7 +1,7 @@
 body
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
   text-align: center
-  font-size: 28px
+  font-size: 26px
   .app
     width: 100%
   #root
@@ -14,7 +14,7 @@ body
     color: white
     display: flex
     flex-direction: column
-    margin: 15px 30%
+    margin: 5px 30%
   .buttons
      display: flex
   button
@@ -27,9 +27,12 @@ body
     background-color: yellow
   .calc
     background: black
-    margin: 15px 30%
+    margin: 5px 30%
     color: white
   .result
     background: yellow
   .change
     display: flex
+  .btn
+    margin: 5px 30%
+    width: 200px
